--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -4,7 +4,7 @@
  */
 {
 	"$schema": "node_modules/wrangler/config-schema.json",
-	"name": "notolib",
+	"name": "proxy-notolib",
 	"main": "src/index.js",
 	"compatibility_date": "2025-04-18",
 	"observability": {
